[gd_scene load_steps=6 format=2]

[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://Options.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_left = -2.0
margin_top = -1.0
margin_right = -2.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 6.0
margin_top = -169.5
margin_right = 6.0
margin_bottom = -10.5002
custom_fonts/font = SubResource( 1 )
text = "Survival Shooter"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -94.0001
margin_top = -267.0
margin_right = 85.9999
margin_bottom = -167.0
custom_fonts/font = SubResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="OptionsButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -140.0
margin_top = -116.0
margin_right = 130.0
margin_bottom = -32.0001
custom_fonts/font = SubResource( 2 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" parent="." instance=ExtResource( 3 )]

[node name="ReturnButton" type="Button" parent="."]
margin_left = 759.002
margin_top = 490.001
margin_right = 997.002
margin_bottom = 574.001
custom_fonts/font = SubResource( 1 )
text = "Return"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]
